// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Navigation should correctly render amp navigation 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  margin: 0 auto;
  border-bottom: 0.0625rem solid #B80000;
  opacity: 0.7;
}

.emotion-1 {
  position: relative;
  background-color: #FFFFFF;
}

@media (max-width: 37.4375rem) {
  .emotion-1.si-nav-open {
    background-color: #222222;
  }
}

@media (min-width: 62.9375rem) {
  .emotion-1::after {
    content: '';
    position: absolute;
    bottom: 0;
    right: 0;
    left: 0;
    border-bottom: 0.0625rem solid #E6E8EA;
  }
}

.emotion-1 .emotion-13::after {
  left: 0;
}

.emotion-3 {
  position: relative;
  max-width: 63.4rem;
  margin: 0;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-3 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-3 {
    margin: 0 auto;
  }
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-6 {
  position: relative;
  width: 100%;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  z-index: 0;
}

.emotion-7::before {
  content: '';
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  width: 100vw;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  background: #B80000;
  pointer-events: none;
}

@media (max-width: 37.4375rem) {
  .emotion-8 {
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-8::-webkit-scrollbar {
    display: none;
  }

  .emotion-8:focus-visible {
    outline: none;
  }

  .emotion-8:focus-visible::after {
    outline: 0.1875rem solid #000000;
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
  }

  .emotion-8:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(
            to right,
            rgba(255, 255, 255, 0) 0%,
            rgba(255, 255, 255, 1) 100%
          );
  }

  @media (min-width: 25rem) {
    .emotion-8:after {
      width: 6rem;
    }
  }
}

.emotion-8 li a {
  color: #FFFFFF;
}

.emotion-8 li a:hover::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li a:focus::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li a:focus-visible::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li a[data-active="true"] span::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li:before {
  content: "";
  position: absolute;
  inset-inline-end: -0.25rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #FFFFFF;
  display: block;
  opacity: 0.3;
}

.emotion-8 li:last-child:before {
  display: none;
}

.emotion-8:after {
  background: none;
}

@media (max-width: 37.4375rem) {
  .emotion-8.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

.emotion-10 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    overflow: hidden;
  }
}

.emotion-12 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0.75rem;
  margin-inline-end: 0.75rem;
}

@media (max-width: 37.4375rem) {
  .emotion-12:last-child {
    margin-right: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-14 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-14 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-14:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  border-bottom: 0.3125rem solid #B80000;
}

.emotion-14:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.1875rem solid #000000;
}

.emotion-14:focus-visible::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.1875rem solid #000000;
}

.emotion-16::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-18 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-21 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-21 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-21 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-21 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-21:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-21:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.1875rem solid #000000;
}

.emotion-21:focus-visible::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.1875rem solid #000000;
}

.emotion-23 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
  background-color: #B80000;
  color: #FFFFFF;
}

.emotion-23:hover,
.emotion-23:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-23:hover::after,
.emotion-23:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #000000;
}

@media (min-width: 37.5rem) {
  .emotion-23 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-23 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-23 svg {
  vertical-align: middle;
}

.emotion-23 svg {
  vertical-align: middle;
  fill: #FFFFFF;
}

.emotion-25 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-25 {
    fill: linkText;
  }
}

.emotion-30 {
  background-color: #FFFFFF;
  clear: both;
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  z-index: 99999;
  border-bottom: 0.1875rem solid #B80000;
}

@media (min-width: 37.5rem) {
  .emotion-30 {
    display: none;
    visibility: hidden;
  }
}

.emotion-30 ul {
  padding: 0;
  border: none;
}

.emotion-30 ul li {
  padding: 0;
}

.emotion-30 ul li:last-child {
  padding-bottom: 0;
}

.emotion-30 a {
  display: block;
  position: relative;
  padding-inline: 0.5rem;
}

.emotion-30 a:hover {
  background-color: #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-30 a:before {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  height: 100%;
  width: 0.25rem;
  background: #B80000;
  display: block;
  opacity: 0;
}

.emotion-30 a:hover::before {
  opacity: 1;
}

.emotion-30 a:focus-visible {
  outline-offset: -0.1875rem;
}

.emotion-32 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-34 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-34:last-child {
  padding-bottom: 0.25rem;
  border: 0;
}

.emotion-36 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0;
  display: inline-block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-36 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-36 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-36:hover,
.emotion-36:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: #B80000;
}

.emotion-38 {
  width: 100%;
  position: relative;
  z-index: 1;
}

@media (max-width: 37.4375rem) {
  .emotion-39 {
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-39::-webkit-scrollbar {
    display: none;
  }

  .emotion-39:focus-visible {
    outline: none;
  }

  .emotion-39:focus-visible::after {
    outline: 0.1875rem solid #000000;
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
  }

  .emotion-39:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(
            to right,
            rgba(255, 255, 255, 0) 0%,
            rgba(255, 255, 255, 1) 100%
          );
  }

  @media (min-width: 25rem) {
    .emotion-39:after {
      width: 6rem;
    }
  }
}

.emotion-39 li:before {
  content: "";
  position: absolute;
  inset-inline-end: -0.25rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #B0B2B4;
  display: block;
  opacity: 1;
}

.emotion-39 li:last-child:before {
  display: none;
}

@media (max-width: 37.4375rem) {
  .emotion-39.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

<div>
  <div
    class="emotion-0"
  />
  <nav
    class="emotion-1 emotion-2"
    dir="ltr"
    id="si-nav"
    role="navigation"
  >
    <div
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-e2e="scrollable-nav"
              dir="ltr"
            >
              <ul
                class="emotion-10 emotion-11"
                role="list"
              >
                <li
                  class="emotion-12 emotion-13"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    aria-label="Home"
                    class="focusIndicatorRemove emotion-14 emotion-15"
                    data-active="true"
                    href="/news"
                  >
                    <span
                      class="emotion-16 emotion-17"
                      id="NavigationLinks-Home"
                      role="text"
                    >
                      <span
                        class="emotion-18"
                      >
                        Current page, 
                      </span>
                      Home
                    </span>
                  </a>
                </li>
                <li
                  class="emotion-12 emotion-13"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-21 emotion-15"
                    href="/about"
                  >
                    About
                  </a>
                </li>
              </ul>
            </div>
            <amp-state
              id="menuState"
            >
              <script
                type="application/json"
              >
                {"expanded":false}
              </script>
            </amp-state>
            <button
              aria-expanded="false"
              class="focusIndicatorRemove emotion-23 emotion-24"
              data-amp-bind-aria-expanded="menuState.expanded ? "true" : "false""
              dir="ltr"
              on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
              si-nav-dropdown-menu.toggleVisibility,
              si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
              si-nav.toggleClass(class=si-nav-open)
            "
              type="button"
            >
              <svg
                aria-hidden="true"
                class="emotion-25 emotion-26"
                data-amp-bind-hidden="menuState.expanded"
                focusable="false"
                height="2.75rem"
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="emotion-25 emotion-26"
                data-amp-bind-hidden="!menuState.expanded"
                focusable="false"
                height="2.75rem"
                hidden=""
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                class="emotion-18"
              >
                Sections
              </span>
            </button>
          </div>
          <div
            class="emotion-30 emotion-31"
            data-e2e="dropdown-nav"
            hidden=""
            id="si-nav-dropdown-menu"
          >
            <ul
              class="emotion-32 emotion-33"
            >
              <li
                class="emotion-34 emotion-35"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-home"
                  class="emotion-36 emotion-37"
                  href="/news"
                >
                  <span
                    id="dropdownNavigation-home"
                  >
                    Home
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="emotion-38"
        >
          <div
            class="emotion-39 emotion-9"
            data-e2e="scrollable-nav-secondary"
            dir="ltr"
            id="si-nav-scrollable"
          >
            <ul
              class="emotion-10 emotion-11"
              role="list"
            />
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Navigation should correctly render amp navigation on a URL not associated with navigation items 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  margin: 0 auto;
  border-bottom: 0.0625rem solid #B80000;
  opacity: 0.7;
}

.emotion-1 {
  position: relative;
  background-color: #FFFFFF;
}

@media (max-width: 37.4375rem) {
  .emotion-1.si-nav-open {
    background-color: #222222;
  }
}

@media (min-width: 62.9375rem) {
  .emotion-1::after {
    content: '';
    position: absolute;
    bottom: 0;
    right: 0;
    left: 0;
    border-bottom: 0.0625rem solid #E6E8EA;
  }
}

.emotion-1 .emotion-13::after {
  left: 0;
}

.emotion-3 {
  position: relative;
  max-width: 63.4rem;
  margin: 0;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-3 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-3 {
    margin: 0 auto;
  }
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-6 {
  position: relative;
  width: 100%;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  z-index: 0;
}

.emotion-7::before {
  content: '';
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  width: 100vw;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  background: #B80000;
  pointer-events: none;
}

@media (max-width: 37.4375rem) {
  .emotion-8 {
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-8::-webkit-scrollbar {
    display: none;
  }

  .emotion-8:focus-visible {
    outline: none;
  }

  .emotion-8:focus-visible::after {
    outline: 0.1875rem solid #000000;
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
  }

  .emotion-8:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(
            to right,
            rgba(255, 255, 255, 0) 0%,
            rgba(255, 255, 255, 1) 100%
          );
  }

  @media (min-width: 25rem) {
    .emotion-8:after {
      width: 6rem;
    }
  }
}

.emotion-8 li a {
  color: #FFFFFF;
}

.emotion-8 li a:hover::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li a:focus::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li a:focus-visible::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li a[data-active="true"] span::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li:before {
  content: "";
  position: absolute;
  inset-inline-end: -0.25rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #FFFFFF;
  display: block;
  opacity: 0.3;
}

.emotion-8 li:last-child:before {
  display: none;
}

.emotion-8:after {
  background: none;
}

@media (max-width: 37.4375rem) {
  .emotion-8.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

.emotion-10 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    overflow: hidden;
  }
}

.emotion-12 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0.75rem;
  margin-inline-end: 0.75rem;
}

@media (max-width: 37.4375rem) {
  .emotion-12:last-child {
    margin-right: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-14 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-14 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-14:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-14:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.1875rem solid #000000;
}

.emotion-14:focus-visible::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.1875rem solid #000000;
}

.emotion-20 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
  background-color: #B80000;
  color: #FFFFFF;
}

.emotion-20:hover,
.emotion-20:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-20:hover::after,
.emotion-20:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #000000;
}

@media (min-width: 37.5rem) {
  .emotion-20 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-20 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-20 svg {
  vertical-align: middle;
}

.emotion-20 svg {
  vertical-align: middle;
  fill: #FFFFFF;
}

.emotion-22 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-22 {
    fill: linkText;
  }
}

.emotion-26 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-27 {
  background-color: #FFFFFF;
  clear: both;
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  z-index: 99999;
  border-bottom: 0.1875rem solid #B80000;
}

@media (min-width: 37.5rem) {
  .emotion-27 {
    display: none;
    visibility: hidden;
  }
}

.emotion-27 ul {
  padding: 0;
  border: none;
}

.emotion-27 ul li {
  padding: 0;
}

.emotion-27 ul li:last-child {
  padding-bottom: 0;
}

.emotion-27 a {
  display: block;
  position: relative;
  padding-inline: 0.5rem;
}

.emotion-27 a:hover {
  background-color: #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-27 a:before {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  height: 100%;
  width: 0.25rem;
  background: #B80000;
  display: block;
  opacity: 0;
}

.emotion-27 a:hover::before {
  opacity: 1;
}

.emotion-27 a:focus-visible {
  outline-offset: -0.1875rem;
}

.emotion-29 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-31 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-31:last-child {
  padding-bottom: 0.25rem;
  border: 0;
}

.emotion-33 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0;
  display: inline-block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-33 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-33 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-33:hover,
.emotion-33:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: #B80000;
}

.emotion-35 {
  width: 100%;
  position: relative;
  z-index: 1;
}

@media (max-width: 37.4375rem) {
  .emotion-36 {
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-36::-webkit-scrollbar {
    display: none;
  }

  .emotion-36:focus-visible {
    outline: none;
  }

  .emotion-36:focus-visible::after {
    outline: 0.1875rem solid #000000;
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
  }

  .emotion-36:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(
            to right,
            rgba(255, 255, 255, 0) 0%,
            rgba(255, 255, 255, 1) 100%
          );
  }

  @media (min-width: 25rem) {
    .emotion-36:after {
      width: 6rem;
    }
  }
}

.emotion-36 li:before {
  content: "";
  position: absolute;
  inset-inline-end: -0.25rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #B0B2B4;
  display: block;
  opacity: 1;
}

.emotion-36 li:last-child:before {
  display: none;
}

@media (max-width: 37.4375rem) {
  .emotion-36.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

<div>
  <div
    class="emotion-0"
  />
  <nav
    class="emotion-1 emotion-2"
    dir="ltr"
    id="si-nav"
    role="navigation"
  >
    <div
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-e2e="scrollable-nav"
              dir="ltr"
            >
              <ul
                class="emotion-10 emotion-11"
                role="list"
              >
                <li
                  class="emotion-12 emotion-13"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-14 emotion-15"
                    href="/news"
                  >
                    Home
                  </a>
                </li>
                <li
                  class="emotion-12 emotion-13"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-14 emotion-15"
                    href="/about"
                  >
                    About
                  </a>
                </li>
              </ul>
            </div>
            <amp-state
              id="menuState"
            >
              <script
                type="application/json"
              >
                {"expanded":false}
              </script>
            </amp-state>
            <button
              aria-expanded="false"
              class="focusIndicatorRemove emotion-20 emotion-21"
              data-amp-bind-aria-expanded="menuState.expanded ? "true" : "false""
              dir="ltr"
              on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
              si-nav-dropdown-menu.toggleVisibility,
              si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
              si-nav.toggleClass(class=si-nav-open)
            "
              type="button"
            >
              <svg
                aria-hidden="true"
                class="emotion-22 emotion-23"
                data-amp-bind-hidden="menuState.expanded"
                focusable="false"
                height="2.75rem"
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="emotion-22 emotion-23"
                data-amp-bind-hidden="!menuState.expanded"
                focusable="false"
                height="2.75rem"
                hidden=""
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                class="emotion-26"
              >
                Sections
              </span>
            </button>
          </div>
          <div
            class="emotion-27 emotion-28"
            data-e2e="dropdown-nav"
            hidden=""
            id="si-nav-dropdown-menu"
          >
            <ul
              class="emotion-29 emotion-30"
            >
              <li
                class="emotion-31 emotion-32"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-home"
                  class="emotion-33 emotion-34"
                  href="/news"
                >
                  <span
                    id="dropdownNavigation-home"
                  >
                    Home
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="emotion-35"
        >
          <div
            class="emotion-36 emotion-9"
            data-e2e="scrollable-nav-secondary"
            dir="ltr"
            id="si-nav-scrollable"
          >
            <ul
              class="emotion-10 emotion-11"
              role="list"
            />
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Navigation should correctly render amp navigation on non-home navigation page 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  margin: 0 auto;
  border-bottom: 0.0625rem solid #B80000;
  opacity: 0.7;
}

.emotion-1 {
  position: relative;
  background-color: #FFFFFF;
}

@media (max-width: 37.4375rem) {
  .emotion-1.si-nav-open {
    background-color: #222222;
  }
}

@media (min-width: 62.9375rem) {
  .emotion-1::after {
    content: '';
    position: absolute;
    bottom: 0;
    right: 0;
    left: 0;
    border-bottom: 0.0625rem solid #E6E8EA;
  }
}

.emotion-1 .emotion-13::after {
  left: 0;
}

.emotion-3 {
  position: relative;
  max-width: 63.4rem;
  margin: 0;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-3 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-3 {
    margin: 0 auto;
  }
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-6 {
  position: relative;
  width: 100%;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  z-index: 0;
}

.emotion-7::before {
  content: '';
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  width: 100vw;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  background: #B80000;
  pointer-events: none;
}

@media (max-width: 37.4375rem) {
  .emotion-8 {
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-8::-webkit-scrollbar {
    display: none;
  }

  .emotion-8:focus-visible {
    outline: none;
  }

  .emotion-8:focus-visible::after {
    outline: 0.1875rem solid #000000;
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
  }

  .emotion-8:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(
            to right,
            rgba(255, 255, 255, 0) 0%,
            rgba(255, 255, 255, 1) 100%
          );
  }

  @media (min-width: 25rem) {
    .emotion-8:after {
      width: 6rem;
    }
  }
}

.emotion-8 li a {
  color: #FFFFFF;
}

.emotion-8 li a:hover::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li a:focus::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li a:focus-visible::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li a[data-active="true"] span::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li:before {
  content: "";
  position: absolute;
  inset-inline-end: -0.25rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #FFFFFF;
  display: block;
  opacity: 0.3;
}

.emotion-8 li:last-child:before {
  display: none;
}

.emotion-8:after {
  background: none;
}

@media (max-width: 37.4375rem) {
  .emotion-8.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

.emotion-10 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    overflow: hidden;
  }
}

.emotion-12 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0.75rem;
  margin-inline-end: 0.75rem;
}

@media (max-width: 37.4375rem) {
  .emotion-12:last-child {
    margin-right: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-14 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-14 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-14:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-14:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.1875rem solid #000000;
}

.emotion-14:focus-visible::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.1875rem solid #000000;
}

.emotion-18 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-18 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-18:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  border-bottom: 0.3125rem solid #B80000;
}

.emotion-18:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.1875rem solid #000000;
}

.emotion-18:focus-visible::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.1875rem solid #000000;
}

.emotion-20::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-22 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-23 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
  background-color: #B80000;
  color: #FFFFFF;
}

.emotion-23:hover,
.emotion-23:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-23:hover::after,
.emotion-23:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #000000;
}

@media (min-width: 37.5rem) {
  .emotion-23 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-23 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-23 svg {
  vertical-align: middle;
}

.emotion-23 svg {
  vertical-align: middle;
  fill: #FFFFFF;
}

.emotion-25 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-25 {
    fill: linkText;
  }
}

.emotion-30 {
  background-color: #FFFFFF;
  clear: both;
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  z-index: 99999;
  border-bottom: 0.1875rem solid #B80000;
}

@media (min-width: 37.5rem) {
  .emotion-30 {
    display: none;
    visibility: hidden;
  }
}

.emotion-30 ul {
  padding: 0;
  border: none;
}

.emotion-30 ul li {
  padding: 0;
}

.emotion-30 ul li:last-child {
  padding-bottom: 0;
}

.emotion-30 a {
  display: block;
  position: relative;
  padding-inline: 0.5rem;
}

.emotion-30 a:hover {
  background-color: #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-30 a:before {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  height: 100%;
  width: 0.25rem;
  background: #B80000;
  display: block;
  opacity: 0;
}

.emotion-30 a:hover::before {
  opacity: 1;
}

.emotion-30 a:focus-visible {
  outline-offset: -0.1875rem;
}

.emotion-32 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-34 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-34:last-child {
  padding-bottom: 0.25rem;
  border: 0;
}

.emotion-36 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0;
  display: inline-block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-36 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-36 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-36:hover,
.emotion-36:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: #B80000;
}

.emotion-38 {
  width: 100%;
  position: relative;
  z-index: 1;
}

@media (max-width: 37.4375rem) {
  .emotion-39 {
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-39::-webkit-scrollbar {
    display: none;
  }

  .emotion-39:focus-visible {
    outline: none;
  }

  .emotion-39:focus-visible::after {
    outline: 0.1875rem solid #000000;
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
  }

  .emotion-39:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(
            to right,
            rgba(255, 255, 255, 0) 0%,
            rgba(255, 255, 255, 1) 100%
          );
  }

  @media (min-width: 25rem) {
    .emotion-39:after {
      width: 6rem;
    }
  }
}

.emotion-39 li:before {
  content: "";
  position: absolute;
  inset-inline-end: -0.25rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #B0B2B4;
  display: block;
  opacity: 1;
}

.emotion-39 li:last-child:before {
  display: none;
}

@media (max-width: 37.4375rem) {
  .emotion-39.si-nav-scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

<div>
  <div
    class="emotion-0"
  />
  <nav
    class="emotion-1 emotion-2"
    dir="ltr"
    id="si-nav"
    role="navigation"
  >
    <div
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-e2e="scrollable-nav"
              dir="ltr"
            >
              <ul
                class="emotion-10 emotion-11"
                role="list"
              >
                <li
                  class="emotion-12 emotion-13"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-14 emotion-15"
                    href="/news"
                  >
                    Home
                  </a>
                </li>
                <li
                  class="emotion-12 emotion-13"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    aria-label="About"
                    class="focusIndicatorRemove emotion-18 emotion-15"
                    data-active="true"
                    href="/about"
                  >
                    <span
                      class="emotion-20 emotion-21"
                      id="NavigationLinks-About"
                      role="text"
                    >
                      <span
                        class="emotion-22"
                      >
                        Current page, 
                      </span>
                      About
                    </span>
                  </a>
                </li>
              </ul>
            </div>
            <amp-state
              id="menuState"
            >
              <script
                type="application/json"
              >
                {"expanded":false}
              </script>
            </amp-state>
            <button
              aria-expanded="false"
              class="focusIndicatorRemove emotion-23 emotion-24"
              data-amp-bind-aria-expanded="menuState.expanded ? "true" : "false""
              dir="ltr"
              on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
              si-nav-dropdown-menu.toggleVisibility,
              si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
              si-nav.toggleClass(class=si-nav-open)
            "
              type="button"
            >
              <svg
                aria-hidden="true"
                class="emotion-25 emotion-26"
                data-amp-bind-hidden="menuState.expanded"
                focusable="false"
                height="2.75rem"
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="emotion-25 emotion-26"
                data-amp-bind-hidden="!menuState.expanded"
                focusable="false"
                height="2.75rem"
                hidden=""
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                class="emotion-22"
              >
                Sections
              </span>
            </button>
          </div>
          <div
            class="emotion-30 emotion-31"
            data-e2e="dropdown-nav"
            hidden=""
            id="si-nav-dropdown-menu"
          >
            <ul
              class="emotion-32 emotion-33"
            >
              <li
                class="emotion-34 emotion-35"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-home"
                  class="emotion-36 emotion-37"
                  href="/news"
                >
                  <span
                    id="dropdownNavigation-home"
                  >
                    Home
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="emotion-38"
        >
          <div
            class="emotion-39 emotion-9"
            data-e2e="scrollable-nav-secondary"
            dir="ltr"
            id="si-nav-scrollable"
          >
            <ul
              class="emotion-10 emotion-11"
              role="list"
            />
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Navigation should correctly render canonical navigation 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  margin: 0 auto;
  border-bottom: 0.0625rem solid #B80000;
  opacity: 0.7;
}

.emotion-1 {
  position: relative;
  background-color: #FFFFFF;
}

@media (min-width: 62.9375rem) {
  .emotion-1::after {
    content: '';
    position: absolute;
    bottom: 0;
    right: 0;
    left: 0;
    border-bottom: 0.0625rem solid #E6E8EA;
  }
}

.emotion-1 .emotion-13::after {
  left: 0;
}

.emotion-3 {
  position: relative;
  max-width: 63.4rem;
  margin: 0;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-3 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-3 {
    margin: 0 auto;
  }
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-6 {
  position: relative;
  width: 100%;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  z-index: 0;
}

.emotion-7::before {
  content: '';
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  width: 100vw;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  background: #B80000;
  pointer-events: none;
}

@media (max-width: 37.4375rem) {
  .emotion-8 {
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-8::-webkit-scrollbar {
    display: none;
  }

  .emotion-8:focus-visible {
    outline: none;
  }

  .emotion-8:focus-visible::after {
    outline: 0.1875rem solid #000000;
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
  }

  .emotion-8:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(
            to right,
            rgba(255, 255, 255, 0) 0%,
            rgba(255, 255, 255, 1) 100%
          );
  }

  @media (min-width: 25rem) {
    .emotion-8:after {
      width: 6rem;
    }
  }
}

.emotion-8 li a {
  color: #FFFFFF;
}

.emotion-8 li a:hover::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li a:focus::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li a:focus-visible::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li a[data-active="true"] span::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li:before {
  content: "";
  position: absolute;
  inset-inline-end: -0.25rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #FFFFFF;
  display: block;
  opacity: 0.3;
}

.emotion-8 li:last-child:before {
  display: none;
}

.emotion-8:after {
  background: none;
}

.emotion-10 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    overflow: hidden;
  }
}

.emotion-12 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0.75rem;
  margin-inline-end: 0.75rem;
}

@media (max-width: 37.4375rem) {
  .emotion-12:last-child {
    margin-right: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-14 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-14 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-14:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  border-bottom: 0.3125rem solid #B80000;
}

.emotion-14:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.1875rem solid #000000;
}

.emotion-14:focus-visible::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.1875rem solid #000000;
}

.emotion-16::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-18 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-21 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-21 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-21 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-21 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-21:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-21:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.1875rem solid #000000;
}

.emotion-21:focus-visible::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.1875rem solid #000000;
}

.emotion-23 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
  background-color: #B80000;
  color: #FFFFFF;
}

.emotion-23:hover,
.emotion-23:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-23:hover::after,
.emotion-23:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #000000;
}

@media (min-width: 37.5rem) {
  .emotion-23 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-23 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-23 svg {
  vertical-align: middle;
}

.emotion-23 svg {
  vertical-align: middle;
  fill: #FFFFFF;
}

.emotion-25 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-25 {
    fill: linkText;
  }
}

.emotion-28 {
  background-color: #FFFFFF;
  clear: both;
  overflow: hidden;
  height: 0;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  transition-timing-function: cubic-bezier(0, 0, 0.58, 1);
  visibility: hidden;
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  z-index: 99999;
  border-bottom: 0.1875rem solid #B80000;
}

@media (min-width: 37.5rem) {
  .emotion-28 {
    display: none;
    visibility: hidden;
  }
}

@media (prefers-reduced-motion: reduce) {
  .emotion-28 {
    -webkit-transition: none;
    transition: none;
  }
}

.emotion-28 ul {
  padding: 0;
  border: none;
}

.emotion-28 ul li {
  padding: 0;
}

.emotion-28 ul li:last-child {
  padding-bottom: 0;
}

.emotion-28 a {
  display: block;
  position: relative;
  padding-inline: 0.5rem;
}

.emotion-28 a:hover {
  background-color: #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-28 a:before {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  height: 100%;
  width: 0.25rem;
  background: #B80000;
  display: block;
  opacity: 0;
}

.emotion-28 a:hover::before {
  opacity: 1;
}

.emotion-28 a:focus-visible {
  outline-offset: -0.1875rem;
}

.emotion-30 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-32 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-32:last-child {
  padding-bottom: 0.25rem;
  border: 0;
}

.emotion-34 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0;
  display: inline-block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-34 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-34 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-34:hover,
.emotion-34:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: #B80000;
}

.emotion-36 {
  width: 100%;
  position: relative;
  z-index: 1;
}

@media (max-width: 37.4375rem) {
  .emotion-37 {
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-37::-webkit-scrollbar {
    display: none;
  }

  .emotion-37:focus-visible {
    outline: none;
  }

  .emotion-37:focus-visible::after {
    outline: 0.1875rem solid #000000;
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
  }

  .emotion-37:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(
            to right,
            rgba(255, 255, 255, 0) 0%,
            rgba(255, 255, 255, 1) 100%
          );
  }

  @media (min-width: 25rem) {
    .emotion-37:after {
      width: 6rem;
    }
  }
}

.emotion-37 li:before {
  content: "";
  position: absolute;
  inset-inline-end: -0.25rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #B0B2B4;
  display: block;
  opacity: 1;
}

.emotion-37 li:last-child:before {
  display: none;
}

.emotion-41 {
  position: absolute;
  width: 100%;
  inset-inline-start: 0;
}

@media (min-width: 1041px) {
  .emotion-41 {
    width: 100%;
  }
}

.emotion-41::after {
  content: '';
  position: absolute;
  inset-block-end: 0;
  width: 100%;
  border-bottom: 0.0625rem solid #E6E8EA;
}

<div>
  <div
    class="emotion-0"
  />
  <nav
    class="emotion-1 emotion-2"
    dir="ltr"
    role="navigation"
  >
    <div
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-e2e="scrollable-nav"
              dir="ltr"
            >
              <ul
                class="emotion-10 emotion-11"
                role="list"
              >
                <li
                  class="emotion-12 emotion-13"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    aria-label="Home"
                    class="focusIndicatorRemove emotion-14 emotion-15"
                    data-active="true"
                    href="/news"
                  >
                    <span
                      class="emotion-16 emotion-17"
                      id="NavigationLinks-Home"
                      role="text"
                    >
                      <span
                        class="emotion-18"
                      >
                        Current page, 
                      </span>
                      Home
                    </span>
                  </a>
                </li>
                <li
                  class="emotion-12 emotion-13"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-21 emotion-15"
                    href="/about"
                  >
                    About
                  </a>
                </li>
              </ul>
            </div>
            <button
              aria-expanded="false"
              class="focusIndicatorRemove emotion-23 emotion-24"
              dir="ltr"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="emotion-25 emotion-26"
                focusable="false"
                height="2.75rem"
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
                />
              </svg>
              <span
                class="emotion-18"
              >
                Sections
              </span>
            </button>
          </div>
          <div
            class="emotion-28 emotion-29"
            data-e2e="dropdown-nav"
            height="0"
          >
            <ul
              class="emotion-30 emotion-31"
            >
              <li
                class="emotion-32 emotion-33"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-home"
                  class="emotion-34 emotion-35"
                  href="/news"
                >
                  <span
                    id="dropdownNavigation-home"
                  >
                    Home
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="emotion-36"
        >
          <div
            class="emotion-37 emotion-9"
            data-e2e="scrollable-nav-secondary"
            dir="ltr"
          >
            <ul
              class="emotion-10 emotion-11"
              role="list"
            />
          </div>
        </div>
      </div>
      <div
        class="emotion-41"
      />
    </div>
  </nav>
</div>
`;

exports[`Navigation should correctly render canonical navigation on a URL not associated with navigation items 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  margin: 0 auto;
  border-bottom: 0.0625rem solid #B80000;
  opacity: 0.7;
}

.emotion-1 {
  position: relative;
  background-color: #FFFFFF;
}

@media (min-width: 62.9375rem) {
  .emotion-1::after {
    content: '';
    position: absolute;
    bottom: 0;
    right: 0;
    left: 0;
    border-bottom: 0.0625rem solid #E6E8EA;
  }
}

.emotion-1 .emotion-13::after {
  left: 0;
}

.emotion-3 {
  position: relative;
  max-width: 63.4rem;
  margin: 0;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-3 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-3 {
    margin: 0 auto;
  }
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-6 {
  position: relative;
  width: 100%;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  z-index: 0;
}

.emotion-7::before {
  content: '';
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  width: 100vw;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  background: #B80000;
  pointer-events: none;
}

@media (max-width: 37.4375rem) {
  .emotion-8 {
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-8::-webkit-scrollbar {
    display: none;
  }

  .emotion-8:focus-visible {
    outline: none;
  }

  .emotion-8:focus-visible::after {
    outline: 0.1875rem solid #000000;
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
  }

  .emotion-8:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(
            to right,
            rgba(255, 255, 255, 0) 0%,
            rgba(255, 255, 255, 1) 100%
          );
  }

  @media (min-width: 25rem) {
    .emotion-8:after {
      width: 6rem;
    }
  }
}

.emotion-8 li a {
  color: #FFFFFF;
}

.emotion-8 li a:hover::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li a:focus::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li a:focus-visible::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li a[data-active="true"] span::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li:before {
  content: "";
  position: absolute;
  inset-inline-end: -0.25rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #FFFFFF;
  display: block;
  opacity: 0.3;
}

.emotion-8 li:last-child:before {
  display: none;
}

.emotion-8:after {
  background: none;
}

.emotion-10 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    overflow: hidden;
  }
}

.emotion-12 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0.75rem;
  margin-inline-end: 0.75rem;
}

@media (max-width: 37.4375rem) {
  .emotion-12:last-child {
    margin-right: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-14 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-14 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-14:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-14:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.1875rem solid #000000;
}

.emotion-14:focus-visible::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.1875rem solid #000000;
}

.emotion-20 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
  background-color: #B80000;
  color: #FFFFFF;
}

.emotion-20:hover,
.emotion-20:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-20:hover::after,
.emotion-20:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #000000;
}

@media (min-width: 37.5rem) {
  .emotion-20 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-20 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-20 svg {
  vertical-align: middle;
}

.emotion-20 svg {
  vertical-align: middle;
  fill: #FFFFFF;
}

.emotion-22 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-22 {
    fill: linkText;
  }
}

.emotion-24 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-25 {
  background-color: #FFFFFF;
  clear: both;
  overflow: hidden;
  height: 0;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  transition-timing-function: cubic-bezier(0, 0, 0.58, 1);
  visibility: hidden;
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  z-index: 99999;
  border-bottom: 0.1875rem solid #B80000;
}

@media (min-width: 37.5rem) {
  .emotion-25 {
    display: none;
    visibility: hidden;
  }
}

@media (prefers-reduced-motion: reduce) {
  .emotion-25 {
    -webkit-transition: none;
    transition: none;
  }
}

.emotion-25 ul {
  padding: 0;
  border: none;
}

.emotion-25 ul li {
  padding: 0;
}

.emotion-25 ul li:last-child {
  padding-bottom: 0;
}

.emotion-25 a {
  display: block;
  position: relative;
  padding-inline: 0.5rem;
}

.emotion-25 a:hover {
  background-color: #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-25 a:before {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  height: 100%;
  width: 0.25rem;
  background: #B80000;
  display: block;
  opacity: 0;
}

.emotion-25 a:hover::before {
  opacity: 1;
}

.emotion-25 a:focus-visible {
  outline-offset: -0.1875rem;
}

.emotion-27 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-29 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-29:last-child {
  padding-bottom: 0.25rem;
  border: 0;
}

.emotion-31 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0;
  display: inline-block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-31 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-31 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-31:hover,
.emotion-31:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: #B80000;
}

.emotion-33 {
  width: 100%;
  position: relative;
  z-index: 1;
}

@media (max-width: 37.4375rem) {
  .emotion-34 {
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-34::-webkit-scrollbar {
    display: none;
  }

  .emotion-34:focus-visible {
    outline: none;
  }

  .emotion-34:focus-visible::after {
    outline: 0.1875rem solid #000000;
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
  }

  .emotion-34:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(
            to right,
            rgba(255, 255, 255, 0) 0%,
            rgba(255, 255, 255, 1) 100%
          );
  }

  @media (min-width: 25rem) {
    .emotion-34:after {
      width: 6rem;
    }
  }
}

.emotion-34 li:before {
  content: "";
  position: absolute;
  inset-inline-end: -0.25rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #B0B2B4;
  display: block;
  opacity: 1;
}

.emotion-34 li:last-child:before {
  display: none;
}

.emotion-38 {
  position: absolute;
  width: 100%;
  inset-inline-start: 0;
}

@media (min-width: 1041px) {
  .emotion-38 {
    width: 100%;
  }
}

.emotion-38::after {
  content: '';
  position: absolute;
  inset-block-end: 0;
  width: 100%;
  border-bottom: 0.0625rem solid #E6E8EA;
}

<div>
  <div
    class="emotion-0"
  />
  <nav
    class="emotion-1 emotion-2"
    dir="ltr"
    role="navigation"
  >
    <div
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-e2e="scrollable-nav"
              dir="ltr"
            >
              <ul
                class="emotion-10 emotion-11"
                role="list"
              >
                <li
                  class="emotion-12 emotion-13"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-14 emotion-15"
                    href="/news"
                  >
                    Home
                  </a>
                </li>
                <li
                  class="emotion-12 emotion-13"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-14 emotion-15"
                    href="/about"
                  >
                    About
                  </a>
                </li>
              </ul>
            </div>
            <button
              aria-expanded="false"
              class="focusIndicatorRemove emotion-20 emotion-21"
              dir="ltr"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="emotion-22 emotion-23"
                focusable="false"
                height="2.75rem"
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
                />
              </svg>
              <span
                class="emotion-24"
              >
                Sections
              </span>
            </button>
          </div>
          <div
            class="emotion-25 emotion-26"
            data-e2e="dropdown-nav"
            height="0"
          >
            <ul
              class="emotion-27 emotion-28"
            >
              <li
                class="emotion-29 emotion-30"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-home"
                  class="emotion-31 emotion-32"
                  href="/news"
                >
                  <span
                    id="dropdownNavigation-home"
                  >
                    Home
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="emotion-33"
        >
          <div
            class="emotion-34 emotion-9"
            data-e2e="scrollable-nav-secondary"
            dir="ltr"
          >
            <ul
              class="emotion-10 emotion-11"
              role="list"
            />
          </div>
        </div>
      </div>
      <div
        class="emotion-38"
      />
    </div>
  </nav>
</div>
`;

exports[`Navigation should correctly render canonical navigation on non-home navigation page 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  margin: 0 auto;
  border-bottom: 0.0625rem solid #B80000;
  opacity: 0.7;
}

.emotion-1 {
  position: relative;
  background-color: #FFFFFF;
}

@media (min-width: 62.9375rem) {
  .emotion-1::after {
    content: '';
    position: absolute;
    bottom: 0;
    right: 0;
    left: 0;
    border-bottom: 0.0625rem solid #E6E8EA;
  }
}

.emotion-1 .emotion-13::after {
  left: 0;
}

.emotion-3 {
  position: relative;
  max-width: 63.4rem;
  margin: 0;
  background-color: #FFFFFF;
}

@media (min-width: 37.5rem) {
  .emotion-3 {
    margin: 0 0.8rem;
  }
}

@media (min-width: 66rem) {
  .emotion-3 {
    margin: 0 auto;
  }
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-6 {
  position: relative;
  width: 100%;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  position: relative;
  z-index: 0;
}

.emotion-7::before {
  content: '';
  position: absolute;
  z-index: -1;
  top: 0;
  bottom: 0;
  width: 100vw;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  background: #B80000;
  pointer-events: none;
}

@media (max-width: 37.4375rem) {
  .emotion-8 {
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-8::-webkit-scrollbar {
    display: none;
  }

  .emotion-8:focus-visible {
    outline: none;
  }

  .emotion-8:focus-visible::after {
    outline: 0.1875rem solid #000000;
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
  }

  .emotion-8:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(
            to right,
            rgba(255, 255, 255, 0) 0%,
            rgba(255, 255, 255, 1) 100%
          );
  }

  @media (min-width: 25rem) {
    .emotion-8:after {
      width: 6rem;
    }
  }
}

.emotion-8 li a {
  color: #FFFFFF;
}

.emotion-8 li a:hover::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li a:focus::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li a:focus-visible::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li a[data-active="true"] span::after {
  border-bottom-color: #FFFFFF;
}

.emotion-8 li:before {
  content: "";
  position: absolute;
  inset-inline-end: -0.25rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #FFFFFF;
  display: block;
  opacity: 0.3;
}

.emotion-8 li:last-child:before {
  display: none;
}

.emotion-8:after {
  background: none;
}

.emotion-10 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    overflow: hidden;
  }
}

.emotion-12 {
  display: inline-block;
  position: relative;
  z-index: 2;
  -webkit-margin-end: 0.75rem;
  margin-inline-end: 0.75rem;
}

@media (max-width: 37.4375rem) {
  .emotion-12:last-child {
    margin-right: 3rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12::after {
    content: '';
    position: absolute;
    bottom: -1px;
    width: 80rem;
    border-bottom: 0.0625rem solid #E6E8EA;
    z-index: -1;
  }
}

.emotion-14 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-14 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-14:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-14:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.1875rem solid #000000;
}

.emotion-14:focus-visible::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.1875rem solid #000000;
}

.emotion-18 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 0.25rem;
  outline: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-18 {
    padding: 0.75rem 0.5rem;
  }
}

.emotion-18:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  border-bottom: 0.3125rem solid #B80000;
}

.emotion-18:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.1875rem solid #000000;
}

.emotion-18:focus-visible::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
  top: 0;
  border: 0.1875rem solid #000000;
}

.emotion-20::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #B80000;
}

.emotion-22 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-23 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
  background-color: #B80000;
  color: #FFFFFF;
}

.emotion-23:hover,
.emotion-23:focus {
  cursor: pointer;
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.emotion-23:hover::after,
.emotion-23:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #000000;
}

@media (min-width: 37.5rem) {
  .emotion-23 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 20rem) {
  .emotion-23 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

.emotion-23 svg {
  vertical-align: middle;
}

.emotion-23 svg {
  vertical-align: middle;
  fill: #FFFFFF;
}

.emotion-25 {
  color: #000000;
  fill: currentColor;
}

@media screen and (forced-colors: active) {
  .emotion-25 {
    fill: linkText;
  }
}

.emotion-28 {
  background-color: #FFFFFF;
  clear: both;
  overflow: hidden;
  height: 0;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  transition-timing-function: cubic-bezier(0, 0, 0.58, 1);
  visibility: hidden;
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  z-index: 99999;
  border-bottom: 0.1875rem solid #B80000;
}

@media (min-width: 37.5rem) {
  .emotion-28 {
    display: none;
    visibility: hidden;
  }
}

@media (prefers-reduced-motion: reduce) {
  .emotion-28 {
    -webkit-transition: none;
    transition: none;
  }
}

.emotion-28 ul {
  padding: 0;
  border: none;
}

.emotion-28 ul li {
  padding: 0;
}

.emotion-28 ul li:last-child {
  padding-bottom: 0;
}

.emotion-28 a {
  display: block;
  position: relative;
  padding-inline: 0.5rem;
}

.emotion-28 a:hover {
  background-color: #E6E8EA;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-28 a:before {
  content: "";
  position: absolute;
  top: 0;
  inset-inline-start: 0;
  height: 100%;
  width: 0.25rem;
  background: #B80000;
  display: block;
  opacity: 0;
}

.emotion-28 a:hover::before {
  opacity: 1;
}

.emotion-28 a:focus-visible {
  outline-offset: -0.1875rem;
}

.emotion-30 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-32 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #E6E8EA;
}

.emotion-32:last-child {
  padding-bottom: 0.25rem;
  border: 0;
}

.emotion-34 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 400;
  color: #141414;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0.75rem 0;
  display: inline-block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-34 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-34 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-34:hover,
.emotion-34:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: #B80000;
}

.emotion-36 {
  width: 100%;
  position: relative;
  z-index: 1;
}

@media (max-width: 37.4375rem) {
  .emotion-37 {
    white-space: nowrap;
    overflow-x: scroll;
    scroll-behavior: auto;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .emotion-37::-webkit-scrollbar {
    display: none;
  }

  .emotion-37:focus-visible {
    outline: none;
  }

  .emotion-37:focus-visible::after {
    outline: 0.1875rem solid #000000;
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
  }

  .emotion-37:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient(
            to right,
            rgba(255, 255, 255, 0) 0%,
            rgba(255, 255, 255, 1) 100%
          );
  }

  @media (min-width: 25rem) {
    .emotion-37:after {
      width: 6rem;
    }
  }
}

.emotion-37 li:before {
  content: "";
  position: absolute;
  inset-inline-end: -0.25rem;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  height: 60%;
  width: 0.0625rem;
  background: #B0B2B4;
  display: block;
  opacity: 1;
}

.emotion-37 li:last-child:before {
  display: none;
}

.emotion-41 {
  position: absolute;
  width: 100%;
  inset-inline-start: 0;
}

@media (min-width: 1041px) {
  .emotion-41 {
    width: 100%;
  }
}

.emotion-41::after {
  content: '';
  position: absolute;
  inset-block-end: 0;
  width: 100%;
  border-bottom: 0.0625rem solid #E6E8EA;
}

<div>
  <div
    class="emotion-0"
  />
  <nav
    class="emotion-1 emotion-2"
    dir="ltr"
    role="navigation"
  >
    <div
      class="emotion-3 emotion-4"
    >
      <div
        class="emotion-5"
      >
        <div
          class="emotion-6"
        >
          <div
            class="emotion-7"
          >
            <div
              class="emotion-8 emotion-9"
              data-e2e="scrollable-nav"
              dir="ltr"
            >
              <ul
                class="emotion-10 emotion-11"
                role="list"
              >
                <li
                  class="emotion-12 emotion-13"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    class="focusIndicatorRemove emotion-14 emotion-15"
                    href="/news"
                  >
                    Home
                  </a>
                </li>
                <li
                  class="emotion-12 emotion-13"
                  dir="ltr"
                  role="listitem"
                >
                  <a
                    aria-label="About"
                    class="focusIndicatorRemove emotion-18 emotion-15"
                    data-active="true"
                    href="/about"
                  >
                    <span
                      class="emotion-20 emotion-21"
                      id="NavigationLinks-About"
                      role="text"
                    >
                      <span
                        class="emotion-22"
                      >
                        Current page, 
                      </span>
                      About
                    </span>
                  </a>
                </li>
              </ul>
            </div>
            <button
              aria-expanded="false"
              class="focusIndicatorRemove emotion-23 emotion-24"
              dir="ltr"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="emotion-25 emotion-26"
                focusable="false"
                height="2.75rem"
                viewBox="0 0 44 44"
                width="2.75rem"
              >
                <path
                  d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
                />
              </svg>
              <span
                class="emotion-22"
              >
                Sections
              </span>
            </button>
          </div>
          <div
            class="emotion-28 emotion-29"
            data-e2e="dropdown-nav"
            height="0"
          >
            <ul
              class="emotion-30 emotion-31"
            >
              <li
                class="emotion-32 emotion-33"
                role="listitem"
              >
                <a
                  aria-labelledby="dropdownNavigation-home"
                  class="emotion-34 emotion-35"
                  href="/news"
                >
                  <span
                    id="dropdownNavigation-home"
                  >
                    Home
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="emotion-36"
        >
          <div
            class="emotion-37 emotion-9"
            data-e2e="scrollable-nav-secondary"
            dir="ltr"
          >
            <ul
              class="emotion-10 emotion-11"
              role="list"
            />
          </div>
        </div>
      </div>
      <div
        class="emotion-41"
      />
    </div>
  </nav>
</div>
`;
